--- a/Sxh.Client/Sxh.Client/Properties/Resources.resx
+++ b/Sxh.Client/Sxh.Client/Properties/Resources.resx
@@ -124,7 +124,13 @@
   <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bg_transfer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bg-transfer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="pic_rongzi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pic-rongzi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pic_yuebiao" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pic-yuebiao.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pic_zhuanrang" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pic-zhuanrang.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
