--- a/Sxh.Client/Sxh.Client/Properties/Resources.resx
+++ b/Sxh.Client/Sxh.Client/Properties/Resources.resx
@@ -133,4 +133,10 @@
   <data name="pic_zhuanrang" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pic-zhuanrang.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ico_bing" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ico-bing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ico_guan" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ico-guan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
